--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5407296980965714"
      crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5407296980965714"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="calculator">
